--- a/style.css
+++ b/style.css
@@ -13,20 +13,20 @@ body {
     width: 300px;
 }
 
-.sidebar_navegation {
+.sidebar__navegation {
     background-color: #121212;
     border-radius:  8px;
     padding: 16px 0 0 16px;
 }
 
-.sidebar_navegation .logo {
+.sidebar__navegation .logo {
     background-color: #121212;
     display: flex;
     border-radius: 8px;
     padding: 16px 0 0 16px;
 }
 
-.sidebar_navegation .logo img {
+.sidebar__navegation .logo img {
     width: 80px;
 }
 
