--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: black;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -44,7 +45,6 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .library {
@@ -73,7 +73,6 @@ body {
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     padding: 20px 10px;
 }
@@ -113,7 +112,6 @@ body {
 .section-playlist__content .text {
     padding: 0px 0px 14px 0px ;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist__content .title {
@@ -133,7 +131,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     padding: 10px;
     margin: 12px 0px 0px 0px;
     border: 0px;
@@ -181,7 +178,6 @@ body {
 }
 
 .disclaimer-premium .text {
-    font-family: "DM Sans", sans-serif;
     font-weight: 400;
 }
 
