--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -93,7 +93,7 @@ body {
     align-items: flex-start;
     justify-content: space-between;
     gap: 20px;
-    background-color: #242424;
+    background-color: var(--bg-color);
     color: #b3b3b3;
     font-weight: 300;
     font-size: 14px;
@@ -127,7 +127,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: #fff;
-    color: #000;
+    color: var(--color-text);
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
