--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -1,4 +1,10 @@
 :root {
     /* Font */
     --font-dm-sans: "DM Sans", sans-serif;
+
+    /* COLORS */
+    --color-text: #000;
+    --bg-color: #242424;
+    --bg-icon : #131313;
+    --bg-arrow-color : rgba(0,0,07);
 }
