--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -48,11 +48,12 @@ body {
 }
 
 .library {
-    background-color: #121212;
-    border-radius: 8px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    height: 58vh;
+    background-color: #121212;
+    border-radius: 8px;
     padding: 4px 8px;
     color: #b3b3b3;
     font-weight: 600;
