style: Atualização da aparência com componente VAR para os elementos CARDS

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -7,4 +7,26 @@
     --bg-color: #242424;
     --bg-icon : #131313;
     --bg-arrow-color : rgba(0,0,07);
+   
+
+    /* CARDS */
+
+    --card1: #006450;
+    --card2: #8400e7;
+    --card3: #1e3264;
+    --card4: #8c1932;
+    --card5: #e8115b;
+    --card6: #537aa1;
+    --card7: #8e66ac;
+    --card8: #148a08;
+    --card9: #1e3264;
+    --card10: #e91429;
+    --card11: #503750;
+    --card12: #d84000;
+    --card13: #ba5d07;
+    --card14: #001e50;
+    --card15: #3c1e50;
+    
 }
+          
+  
