feat(css): Atualização Media Query para melhorar a experiência em dispositivos móveis

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -1,19 +1,125 @@
-@media screen and (max-width: 1000px){
 
+    /* Typical Device Breakpoints 
+    Celular: até 768px
+    Tablet: até 992px
+    Desktop: até 1200px
+    Grandes telas: Acima 1200px
+    */
+
+@media screen and (min-width: 768px) and (max-width: 992px){
+
+
+    /* Dispositivos móveis */
 
     .main-container {
-        margin-right: 5px;
+        max-width: 52vw;
+        height: 100vh;
+        margin-left: 238px;
+        margin-right: 1px;
     }
 
-    .playlist-container {
-        height: 75vh;
-    }
-
-    .offer__list-item {
-        grid-template-columns: 1fr 1fr;
+    .sidebar {
+        width: 230px;
+        padding: 1px 9PX;
     }
 
     .library {
-        height: 66vh;
+        height: 67vh;
     }
+
+    /* END SIDEBAR */
+
+    .header__navigation {
+        
+        padding: 16px;
+        margin: 1px 1px 0px 10px;
+      }
+
+    .header__navigation .navigation .arrow-left {
+        margin-right: 10px;
+      }
+
+    .arrow-left, .arrow-right {
+        width: 29px;
+        height: 29px;
+    }
+
+    .header__search {
+        width: 139px;
+        height: 48px;
+      }
+
+    .header__search input {
+        padding: 0px 10px 0px 12px;
+    }
+
+    .header__login .subscribe {
+        font-size: 13px;
+        font-weight: 700;
+        margin-right: 1px;
+      }
+
+    .header__login .login {
+        width: 70px;
+        height: 38px;
+        font-size: 13px;
+    }
+
+    /* END HEADER */
+
+    .playlist-container {
+        height: 75vh;
+        padding-top: 15px;
+        margin: 10px 0px 10px 10px;
+    }
+
+    .offer__scroll-container {
+        max-height: 55vh;
+        margin: 15px;
+        overflow-y: auto;
+      }
+
+    .offer__list-item {
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+
+    /* END PLAYLIST */
+
+    .cards {
+        width: 170px;
+        height: 180px;
+      }
+
+    .artist-img {
+        height: 80%;
+        left: 17px;
+        position: absolute;
+        top: 0;
+        width: 80%;
+        border-radius: 50%;
+      }
+
+    .play .fa-play {
+        right: 5px;
+        top: 108px;
+      }
+
+      /*END CARD ARTIST */
+
+      .disclaimer-premium {
+        padding: 15px 8px;
+        width: 81vw;
+    }
+
+    .disclaimer-premium .disclaimer-premium__subtitle {
+        padding: 10px 0px;
+        font-size: 14px;
+    }
+
+    .disclaimer-premium button {
+        font-size: 14px;
+        padding: 10px 15px;
+    }
+
 }
