--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -6,32 +6,31 @@
     Grandes telas: Acima 1200px
     */
 
-@media screen and (min-width: 768px) and (max-width: 992px){
+@media screen and (max-width: 768px) {
 
 
     /* Dispositivos móveis */
 
 
     .main-container {
-        max-width: 62vw;
+        max-width: 80vw;
         height: 100vh;
-        margin-left: 250px;
+        margin-left: 203px;
         margin-right: 1px;
     }
 
     .sidebar {
-        width: 230px;
+        max-width: 200px;
         padding: 1px 9PX;
     }
 
     .library {
-        height: 66vh;
+        height: 60vh;
     }
 
     /* END SIDEBAR */
 
     .header__navigation {
-        
         padding: 16px;
         margin: 1px 1px 0px 10px;
       }
@@ -46,7 +45,7 @@
     }
 
     .header__search {
-        width: 139px;
+        width: 100px;
         height: 48px;
       }
 
@@ -56,13 +55,12 @@
 
     .header__login .subscribe {
         font-size: 13px;
-        font-weight: 700;
         margin-right: 1px;
       }
 
     .header__login .login {
-        width: 70px;
-        height: 38px;
+        width: 60px;
+        height: 35px;
         font-size: 13px;
     }
 
@@ -81,7 +79,7 @@
       }
 
     .offer__list-item {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr ;
         gap: 10px;
     }
 
@@ -101,7 +99,7 @@
 
       .disclaimer-premium {
         padding: 15px 8px;
-        width: 96vw;
+        width: 97vw;
     }
 
     .disclaimer-premium .disclaimer-premium__subtitle {
@@ -116,12 +114,13 @@
 
 }
 
-@media screen and (oriention: portrait) {
-    
-     /* Dispositivos móveis */
+@media screen and (min-width: 768px) and (max-width: 992px){
 
 
-     .main-container {
+    /* Dispositivos móveis */
+
+
+    .main-container {
         max-width: 62vw;
         height: 100vh;
         margin-left: 250px;
