--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -1,225 +1,393 @@
 
     /* Typical Device Breakpoints 
-    Celular: até 768px
+    Mobiles: até 768px
     Tablet: até 992px
-    Desktop: até 1200px
-    Grandes telas: Acima 1200px
+    Grandes telas: Acima 1100px
     */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 500px) {
 
 
-    /* Dispositivos móveis */
+.main-container {
+    max-width: 100vw;
+    height: 100vh;
+    margin-left: 170px;
+    margin-right: 1px;
+}
 
+.sidebar {
+    max-width: 170px;
+    padding: 1px 2px;
+}
 
-    .main-container {
-        max-width: 80vw;
-        height: 100vh;
-        margin-left: 203px;
-        margin-right: 1px;
+.library {
+    height: 66vh;
+}
+
+.languages .languages__button {
+    width: 160px;
+    padding: 8px;
+    margin: 0px
+}
+
+/* END SIDEBAR */
+
+.header__navigation {
+    padding: 16px 0px;
+    margin: 1px 1px 0px 10px;
     }
 
-    .sidebar {
-        max-width: 200px;
-        padding: 1px 9PX;
+.arrow-left, .arrow-right {
+    display: none;
+}
+
+.header__search {
+    width: 10px;
+    height: 10px;
     }
 
-    .library {
-        height: 60vh;
+.header__search img {
+    width: 14px;
+    height: 14px;
+    margin-left: 1px;
+    }
+    
+.header__search input {
+    padding: 0px 10px 0px 12px;
+}
+
+.header__login .subscribe {
+    font-size: 10px;
+    margin-right: 20px;
     }
 
-    /* END SIDEBAR */
+.header__login .login {
+    width: 50px;
+    height: 25px;
+    font-size: 13px;
+    margin-right: 5px;
+}
 
-    .header__navigation {
-        padding: 16px;
-        margin: 1px 1px 0px 10px;
-      }
+/* END HEADER */
 
-    .header__navigation .navigation .arrow-left {
-        margin-right: 10px;
-      }
+.playlist-container {
+    height: 77vh;
+    padding-top: 15px;
+    margin: 10px 0px 10px 10px;
+}
 
-    .arrow-left, .arrow-right {
-        width: 29px;
-        height: 29px;
+.playlist {
+    margin: 10px;
     }
 
-    .header__search {
-        width: 100px;
-        height: 48px;
-      }
-
-    .header__search input {
-        padding: 0px 10px 0px 12px;
+.offer__scroll-container {
+    max-height: 50vh;
+    margin: 15px;
+    overflow-y: auto;
     }
 
-    .header__login .subscribe {
-        font-size: 13px;
-        margin-right: 1px;
-      }
+.offer__list-item {
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
 
-    .header__login .login {
-        width: 60px;
-        height: 35px;
-        font-size: 13px;
+/* END PLAYLIST */
+
+.cards {
+    width: 120px;
+    height: 130px;
     }
 
-    /* END HEADER */
-
-    .playlist-container {
-        height: 75vh;
-        padding-top: 15px;
-        margin: 10px 0px 10px 10px;
+.play .fa-play {
+    right: 5px;
+    top: 108px;
     }
 
-    .offer__scroll-container {
-        max-height: 55vh;
-        margin: 15px;
-        overflow-y: auto;
-      }
+/*END CARD ARTIST */
 
-    .offer__list-item {
-        grid-template-columns: 1fr ;
-        gap: 10px;
-    }
+.disclaimer-premium {
+    padding: 15px 8px;
+    width: 96vw;
+}
 
-    /* END PLAYLIST */
+.disclaimer-premium .disclaimer-premium__subtitle {
+    padding: 10px 0px;
+    font-size: 14px;
+}
 
-    .cards {
-        width: 170px;
-        height: 180px;
-      }
+.disclaimer-premium button {
+    font-size: 14px;
+    padding: 10px 15px;
+}
 
-    .play .fa-play {
-        right: 5px;
-        top: 108px;
-      }
+}
+    
+@media screen and (min-width: 501px) and (max-width: 768px) {
 
-      /*END CARD ARTIST */
 
-      .disclaimer-premium {
-        padding: 15px 8px;
-        width: 97vw;
-    }
+.main-container {
+    max-width: 100vw;
+    height: 100vh;
+    margin-left: 202px;
+    margin-right: 1px;
+}
 
-    .disclaimer-premium .disclaimer-premium__subtitle {
-        padding: 10px 0px;
-        font-size: 14px;
-    }
+.sidebar {
+    width: 200px;
+    padding: 1px 9px;
+}
 
-    .disclaimer-premium button {
-        font-size: 14px;
-        padding: 10px 15px;
-    }
+.library {
+    height: 66vh;
+}
+
+/* END SIDEBAR */
+
+.header__navigation {
+    padding: 16px;
+    margin: 1px 1px 0px 10px;
+  }
+
+.header__navigation .navigation .arrow-left {
+    margin-right: 2px;
+  }
+
+.arrow-left, .arrow-right {
+    width: 29px;
+    height: 29px;
+}
+
+.header__search {
+    width: 80px;
+    height: 30px;
+  }
+
+.header__search input {
+    padding: 0px 10px 0px 12px;
+}
+
+.header__login .subscribe {
+    font-size: 13px;
+    margin-right: 1px;
+  }
+
+.header__login .login {
+    width: 50px;
+    height: 29px;
+    font-size: 13px;
+}
+
+/* END HEADER */
+
+.playlist-container {
+    height: 77vh;
+    padding-top: 15px;
+    margin: 4px 0px 10px 10px;
+}
+
+.offer__scroll-container {
+    max-height: 55vh;
+    margin: 15px;
+    overflow-y: auto;
+  }
+
+.offer__list-item {
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+/* END PLAYLIST */
+
+.cards {
+    width: 130px;
+    height: 140px;
+  }
+
+.play .fa-play {
+    right: 5px;
+    top: 108px;
+  }
+
+/*END CARD ARTIST */
+
+.disclaimer-premium {
+    padding: 15px 8px;
+}
+
+.disclaimer-premium .disclaimer-premium__subtitle {
+    padding: 10px 0px;
+    font-size: 14px;
+}
+
+.disclaimer-premium button {
+    font-size: 14px;
+    padding: 10px 15px;
+}
 
 }
 
-@media screen and (min-width: 768px) and (max-width: 992px){
+@media screen and (min-width: 769px) and (max-width: 992px){
 
+.main-container {
+    max-width: 100vw;
+    height: 100vh;
+    margin-left: 250px;
+    margin-right: 1px;
+}
 
-    /* Dispositivos móveis */
+.sidebar {
+    width: 230px;
+    padding: 1px 9px;
+}
 
+.library {
+    height: 67vh;
+}
+
+.sidebar .cookies {
+    margin: 200px 0px 0px 20px;
+
+}
+
+/* END SIDEBAR */
+
+.header__navigation {
+    
+    padding: 16px;
+    margin: 1px 1px 0px 10px;
+    }
+
+.header__navigation .navigation .arrow-left {
+    margin-right: 10px;
+    }
+
+.arrow-left, .arrow-right {
+    width: 29px;
+    height: 29px;
+}
+
+.header__search {
+    width: 139px;
+    height: 48px;
+    }
+
+.header__search input {
+    padding: 0px 10px 0px 12px;
+}
+
+.header__login .subscribe {
+    font-size: 13px;
+    font-weight: 700;
+    margin-right: 1px;
+    }
+
+.header__login .login {
+    width: 70px;
+    height: 38px;
+    font-size: 13px;
+}
+
+/* END HEADER */
+
+.playlist-container {
+    height: 75vh;
+    padding-top: 15px;
+    margin: 7px 0px 10px 10px;
+}
+
+.offer__scroll-container {
+    max-height: 55vh;
+    margin: 15px;
+    overflow-y: auto;
+    }
+
+.offer__list-item {
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+/* END PLAYLIST */
+
+.cards {
+    width: 170px;
+    height: 180px;
+    }
+
+.play .fa-play {
+    right: 5px;
+    top: 108px;
+    }
+
+/*END CARD ARTIST */
+
+.disclaimer-premium {
+    padding: 15px 8px;
+}
+
+.disclaimer-premium .disclaimer-premium__subtitle {
+    padding: 10px 0px;
+    font-size: 14px;
+}
+
+.disclaimer-premium button {
+    font-size: 14px;
+    padding: 10px 15px;
+}
+
+}
+
+@media screen and (min-width: 993px) and (max-width: 1919px){
 
     .main-container {
-        max-width: 62vw;
+        max-width: 100vw;
         height: 100vh;
-        margin-left: 250px;
         margin-right: 1px;
     }
-
+    
     .sidebar {
-        width: 230px;
-        padding: 1px 9PX;
+        padding: 1px 9px;
     }
-
+    
     .library {
-        height: 66vh;
+        height: 62vh;
     }
 
+    .sidebar .cookies {
+        margin: 160px 0px 0px 20px;
+    
+    }
+    
     /* END SIDEBAR */
-
+    
     .header__navigation {
-        
-        padding: 16px;
         margin: 1px 1px 0px 10px;
-      }
-
-    .header__navigation .navigation .arrow-left {
-        margin-right: 10px;
-      }
-
-    .arrow-left, .arrow-right {
-        width: 29px;
-        height: 29px;
-    }
-
-    .header__search {
-        width: 139px;
-        height: 48px;
-      }
-
-    .header__search input {
-        padding: 0px 10px 0px 12px;
-    }
-
-    .header__login .subscribe {
-        font-size: 13px;
-        font-weight: 700;
-        margin-right: 1px;
-      }
-
-    .header__login .login {
-        width: 70px;
-        height: 38px;
-        font-size: 13px;
-    }
-
+        }
+    
     /* END HEADER */
-
+    
     .playlist-container {
-        height: 75vh;
-        padding-top: 15px;
-        margin: 10px 0px 10px 10px;
+        height: 72vh;
+        margin: 12px 0px 10px 10px;
     }
-
+    
     .offer__scroll-container {
-        max-height: 55vh;
-        margin: 15px;
-        overflow-y: auto;
-      }
-
+        max-height: 48vh;
+        margin: 10px;
+        }
+    
     .offer__list-item {
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-
+    
     /* END PLAYLIST */
-
-    .cards {
-        width: 170px;
-        height: 180px;
-      }
-
+    
+    
     .play .fa-play {
         right: 5px;
         top: 108px;
-      }
-
-      /*END CARD ARTIST */
-
-      .disclaimer-premium {
-        padding: 15px 8px;
-        width: 96vw;
+        }
+    
+    /*END CARD ARTIST */
+    
+    
     }
-
-    .disclaimer-premium .disclaimer-premium__subtitle {
-        padding: 10px 0px;
-        font-size: 14px;
-    }
-
-    .disclaimer-premium button {
-        font-size: 14px;
-        padding: 10px 15px;
-    }
-
-}
