--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -87,15 +87,15 @@
     }
 
 .offer__list-item {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 10px;
 }
 
 /* END PLAYLIST */
 
 .cards {
-    width: 120px;
-    height: 130px;
+    width: 130px;
+    height: 140px;
     }
 
 .play .fa-play {
@@ -125,112 +125,111 @@
 @media screen and (min-width: 501px) and (max-width: 768px) {
 
 
-.main-container {
-    max-width: 100vw;
-    height: 100vh;
-    margin-left: 202px;
-    margin-right: 1px;
-}
-
-.sidebar {
-    width: 200px;
-    padding: 1px 9px;
-}
-
-.library {
-    height: 60vh;
-}
-
-.sidebar .cookies {
-    margin: 100px 0px 0px 20px;
-
-}
-
-/* END SIDEBAR */
-
-.header__navigation {
-    padding: 16px;
-    margin: 1px 1px 0px 10px;
-  }
-
-.header__navigation .navigation .arrow-left {
-    margin-right: 2px;
-  }
-
-.arrow-left, .arrow-right {
-    width: 29px;
-    height: 29px;
-}
-
-.header__search {
-    width: 80px;
-    height: 30px;
-  }
-
-.header__search input {
-    padding: 0px 10px 0px 12px;
-}
-
-.header__login .subscribe {
-    font-size: 13px;
-    margin-right: 1px;
-  }
-
-.header__login .login {
-    width: 50px;
-    height: 29px;
-    font-size: 13px;
-}
-
-/* END HEADER */
-
-.playlist-container {
-    height: 71vh;
-    padding-top: 15px;
-    margin: 4px 0px 10px 10px;
-}
-
-.offer__scroll-container {
-    max-height: 45vh;
-    margin: 15px;
-    overflow-y: auto;
-  }
-
-.offer__list-item {
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-}
-
-/* END PLAYLIST */
-
-.cards {
-    width: 120px;
-    height: 130px;
-  }
-
-.play .fa-play {
-    right: 5px;
-    top: 108px;
-  }
-
-/*END CARD ARTIST */
-
-.disclaimer-premium {
-    padding: 15px 8px;
-}
-
-.disclaimer-premium .disclaimer-premium__subtitle {
-    padding: 10px 0px;
-    font-size: 14px;
-}
-
-.disclaimer-premium button {
-    font-size: 14px;
-    padding: 10px 15px;
-}
-
-}
-
+    .main-container {
+        max-width: 100vw;
+        height: 100vh;
+        margin-left: 202px;
+        margin-right: 1px;
+    }
+    
+    .sidebar {
+        width: 200px;
+        padding: 1px 9px;
+    }
+    
+    .library {
+        height: 60vh;
+    }
+    
+    .sidebar .cookies {
+        margin: 100px 0px 0px 20px;
+    
+    }
+    
+    /* END SIDEBAR */
+    
+    .header__navigation {
+        padding: 16px;
+        margin: 1px 1px 0px 10px;
+      }
+    
+    .header__navigation .navigation .arrow-left {
+        margin-right: 2px;
+      }
+    
+    .arrow-left, .arrow-right {
+        width: 29px;
+        height: 29px;
+    }
+    
+    .header__search {
+        width: 80px;
+        height: 30px;
+      }
+    
+    .header__search input {
+        padding: 0px 10px 0px 12px;
+    }
+    
+    .header__login .subscribe {
+        font-size: 13px;
+        margin-right: 1px;
+      }
+    
+    .header__login .login {
+        width: 50px;
+        height: 29px;
+        font-size: 13px;
+    }
+    
+    /* END HEADER */
+    
+    .playlist-container {
+        height: 71vh;
+        padding-top: 15px;
+        margin: 4px 0px 10px 10px;
+    }
+    
+    .offer__scroll-container {
+        max-height: 45vh;
+        margin: 15px;
+        overflow-y: auto;
+      }
+    
+    .offer__list-item {
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+    
+    /* END PLAYLIST */
+    
+    .cards {
+        width: 120px;
+        height: 130px;
+      }
+    
+    .play .fa-play {
+        right: 5px;
+        top: 108px;
+      }
+    
+    /*END CARD ARTIST */
+    
+    .disclaimer-premium {
+        padding: 15px 8px;
+    }
+    
+    .disclaimer-premium .disclaimer-premium__subtitle {
+        padding: 10px 0px;
+        font-size: 14px;
+    }
+    
+    .disclaimer-premium button {
+        font-size: 14px;
+        padding: 10px 15px;
+    }
+    
+    }
 @media screen and (min-width: 769px) and (max-width: 992px){
 
 .main-container {
